monitoring/kube-resource-report/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-resource-report
  name: kube-resource-report
spec:
  selector:
    application: kube-resource-report
  type: ClusterIP
  ports:
  - name: web
    port: 80
