monitoring/kube-resource-report/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    application: kube-resource-report
  name: kube-resource-report
spec:
  rules:
  - host: kube-resource-report.${HOSTNAME}.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-resource-report
            port: 
              name: web
